<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:gravity="end|bottom"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:gravity="center_vertical|center_horizontal"
            android:textSize="25sp"
            android:text="@string/_7"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:onClick="onDigit"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="25sp"
            android:text="@string/_8"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1 "
            android:textSize="25sp"
            android:onClick="onDigit"
            android:text="@string/_9"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_margin="3dp"
            android:onClick="onOperator"
            android:text="@string/division"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:gravity="center_vertical|center_horizontal"
            android:textSize="25sp"
            android:text="@string/_4"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:onClick="onDigit"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="25sp"
            android:text="@string/_5"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:onClick="onDigit"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="25sp"
            android:text="@string/_6"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:onClick="onOperator"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="25sp"
            android:layout_margin="3dp"
            android:text="@string/multiply"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1 "
            android:onClick="onDigit"
            android:textSize="25sp"
            android:text="@string/_1"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:textSize="25sp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onDigit"
            android:text="@string/_2"/>
        <Button

            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:text="@string/_3"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="25sp"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnSub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:text="@string/Sub"
            android:layout_margin="3dp"
            android:textSize="25sp"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:onClick="onOperator"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onDecimalPoint"
            android:textSize="25sp"
            android:text="@string/Dot"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:text="@string/_0"/>
        <Button
            android:id="@+id/btnAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:layout_margin="3dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/rounded_button"
            android:onClick="onClear"
            android:text="@string/ac"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:onClick="onOperator"
            android:layout_margin="3dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textAlignment="center"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Add"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:onClick="onEqual"
            android:textSize="25sp"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Equal_to"
            />
    </LinearLayout>



    </LinearLayout>

